<input type="range">.setAttribute("value") does not update the value https://bugs.webkit.org/show_bug.cgi?id=202859 <rdar://problem/56204271>

Reviewed by Frédéric Wang.

Source/WebCore:

Make sure the position of the range input element's slider gets updated whenever
the element's 'value' attribute changes.

No new tests, unskipped existing test.

* html/RangeInputType.cpp:
(WebCore::RangeInputType::attributeChanged):

LayoutTests:

Unskip ref test that is no longer failing.

* TestExpectations:

Canonical link: https://commits.webkit.org/216942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251718 268f45cc-cd09-0410-ab3c-d52691b4dbfc