Source/WebCore/html/RangeInputType.cpp
@@ -329,7 +329,7 @@ void RangeInputType::accessKeyAction(bool sendMouseEvents)
 void RangeInputType::attributeChanged(const QualifiedName& name)
 {
     // FIXME: Don't we need to do this work for precisionAttr too?
-    if (name == maxAttr || name == minAttr) {
+    if (name == maxAttr || name == minAttr || name == valueAttr) {
         // Sanitize the value.
         if (auto* element = this->element()) {
             if (element->hasDirtyValue())
